src/objects/Training_Curriculum__c.object
<CustomObject>
    <description>The association between Training Courses and Training Curriculum (M:M relationship)</description>
    <fields>
        <fullName>Curriculum__c</fullName>
        <label>Training Curriculum</label>
        <referenceTo>Curriculum__c</referenceTo>
        <relationshipLabel>Training Curriculum Courses</relationshipLabel>
        <relationshipName>Training_Curriculum</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Minutes__c</fullName>
        <label>Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Training__c</fullName>
        <label>Training Courses</label>
        <referenceTo>Training__c</referenceTo>
        <relationshipLabel>Training Curriculum Courses</relationshipLabel>
        <relationshipName>Training_Curriculum</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Training Curriculum Courses</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Training Curriculum Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Curriculum Courses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>